Fix viewport overflow on Safari

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,6 +62,9 @@ nav {
 
 main {
   grid-area: content;
+  position: relative;
+  overflow-x: hidden;
+  word-wrap: break-word;
 }
 
 footer {
@@ -242,6 +245,7 @@ pre {
   color: white;
   white-space: pre-wrap;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  word-wrap: normal;
 }
 
 pre {
